...
  const val PIN_CONTENT_DESC = "Use my location"

  const val INFO_RATING_BAR = "infoRankingBar"
  const val INFO_TAB = "infoTab"
  const val RATING_TAB = "rankingTab"
  const val RATING_SECTION = "ratingSection"
  const val LISTINGS_TAB = "listingsTab"

  const val HISTORY_TAB = "historyTab"
  const val LISTINGS_SECTION = "listingsSection"
  const val HISTORY_SECTION = "historySection"

  const val DELETE_ACCOUNT_BUTTON = "deleteAccountButton"
  const val DELETE_ACCOUNT_DIALOG = "deleteAccountDialog"
  const val DELETE_ACCOUNT_CONFIRM_BUTTON = "deleteAccountConfirm"
  const val DELETE_ACCOUNT_CANCEL_BUTTON = "deleteAccountCancel"
...
